Did some protection fix, not finished

--- a/src/common/icbm/yuyan/en_US.properties
+++ b/src/common/icbm/yuyan/en_US.properties
@@ -1,2 +1,20 @@
-item.glassPressurePlate.name=Glass Pressure Plate
-item.glassButton.name=Glass Button
+
+itemGroup.ICBM=ICBM
+
+icbm.explosive=Explosive
+icbm.missile=Missile
+icbm.grenade=Grenade
+
+item.sulfur.name=Sulfur
+item.poisonPowder.name=Poison Powder
+item.antidote.name=Antidote
+item.radarGun.name=Radar Gun
+item.defuser.name=Defuser
+item.laserDesignator.name=Laser Designator
+item.tracker.name=Tracker
+
+tile.sulfurOre.name=Sulfur Ore
+tile.glassPressurePlate.name=Glass Pressure Plate
+tile.glassButton.name=Glass Button
+tile.camouflage.name=Camouflage
+tile.proximityDetector.name=Proximity Detector
