--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -12,6 +12,7 @@ item.radarGun.name=Radar Gun
 item.defuser.name=Defuser
 item.laserDesignator.name=Laser Designator
 item.tracker.name=Tracker
+item.signalDisrupter.name=Signal Disrupter
 
 tile.sulfurOre.name=Sulfur Ore
 tile.glassPressurePlate.name=Glass Pressure Plate
