--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -5,17 +5,67 @@ icbm.explosive=Explosive
 icbm.missile=Missile
 icbm.grenade=Grenade
 
+icbm.explosive.conventional=Conventional
+icbm.explosive.condensed=Condensed
+icbm.explosive.shrapnel=Shrapnel
+icbm.explosive.incendiary=Incendiary
+icbm.explosive.chemical=Chemical
+icbm.explosive.anvil=Anvil
+icbm.explosive.repulsive=Repulsive
+icbm.explosive.attractive=Attractive
+
+icbm.explosive.fragmentation=Fragmentation
+icbm.explosive.contagious=Contagious
+icbm.explosive.sonic=Sonic
+icbm.explosive.breaching=Breaching
+icbm.explosive.rejuvenation=Rejuvenation
+icbm.explosive.thermobaric=Thermobaric
+
+icbm.explosive.nuclear=Nuclear
+icbm.explosive.emp=EMP
+icbm.explosive.conflagration=Conflagration
+icbm.explosive.endothermic=Endothermic
+icbm.explosive.antiGravitational=Anti-Gravitational
+icbm.explosive.ender=Ender
+
+icbm.explosive.antimatter=Antimatter
+icbm.explosive.redMatter=Red Matter
+
+icbm.sMine=S-Mine
+
 item.sulfur.name=Sulfur
 item.poisonPowder.name=Poison Powder
 item.antidote.name=Antidote
 item.radarGun.name=Radar Gun
+item.remoteDetonator.name=Remote Detonator
 item.defuser.name=Defuser
 item.laserDesignator.name=Laser Designator
 item.tracker.name=Tracker
 item.signalDisrupter.name=Signal Disrupter
+
+item.bullet.0.name=Conventional Bullet
+item.bullet.1.name=Antimatter Bullet
 
 tile.sulfurOre.name=Sulfur Ore
 tile.glassPressurePlate.name=Glass Pressure Plate
 tile.glassButton.name=Glass Button
 tile.camouflage.name=Camouflage
 tile.proximityDetector.name=Proximity Detector
+
+item.spike.0.name=Spikes
+item.spike.1.name=Poison Spikes
+item.spike.2.name=Flammable Spikes
+
+item.machine.0.name=Launcher Platform T1
+item.machine.1.name=Launcher Platform T2
+item.machine.2.name=Launcher Platform T3
+item.machine.3.name=Launcher Control Panel T1
+item.machine.4.name=Launcher Control Panel T2
+item.machine.5.name=Launcher Control Panel T3
+item.machine.6.name=Launcher Support Frame T1
+item.machine.7.name=Launcher Support Frame T2
+item.machine.8.name=Launcher Support Frame T3
+item.machine.9.name=Radar Station
+item.machine.10.name=EMP Tower
+item.machine.11.name=Railgun
+item.machine.12.name=Cruise Launcher
