--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -45,12 +45,7 @@ item.signalDisrupter.name=Signal Disrupter
 
 item.bullet.0.name=Conventional Bullet
 item.bullet.1.name=Antimatter Bullet
-
-tile.sulfurOre.name=Sulfur Ore
-tile.glassPressurePlate.name=Glass Pressure Plate
-tile.glassButton.name=Glass Button
-tile.camouflage.name=Camouflage
-tile.proximityDetector.name=Proximity Detector
+item.launcher.name=Rocket Launcher
 
 item.spike.0.name=Spikes
 item.spike.1.name=Poison Spikes
@@ -69,3 +64,9 @@ item.machine.9.name=Radar Station
 item.machine.10.name=EMP Tower
 item.machine.11.name=Railgun
 item.machine.12.name=Cruise Launcher
+
+tile.sulfurOre.name=Sulfur Ore
+tile.glassPressurePlate.name=Glass Pressure Plate
+tile.glassButton.name=Glass Button
+tile.camouflage.name=Camouflage
+tile.proximityDetector.name=Proximity Detector
