--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -31,6 +31,11 @@ icbm.explosive.ender=Ender
 icbm.explosive.antimatter=Antimatter
 icbm.explosive.redMatter=Red Matter
 
+icbm.missile.antiBallistic=Anti-ballistic
+icbm.missile.cluster=Cluster
+icbm.missile.nuclearCluster=Nuclear Cluster
+icbm.missile.homing=Homing
+
 icbm.sMine=S-Mine
 
 item.sulfur.name=Sulfur
