--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -27,6 +27,7 @@ icbm.explosive.conflagration=Conflagration
 icbm.explosive.endothermic=Endothermic
 icbm.explosive.antiGravitational=Anti-Gravitational
 icbm.explosive.ender=Ender
+icbm.explosive.hypersonic=Hypersonic
 
 icbm.explosive.antimatter=Antimatter
 icbm.explosive.redMatter=Red Matter
