--- a/resources/icbm/yuyan/es_ES.properties
+++ b/resources/icbm/yuyan/es_ES.properties
@@ -30,6 +30,7 @@ icbm.explosive.conflagration=Conflagración
 icbm.explosive.endothermic=Endotérmico
 icbm.explosive.antiGravitational=Anti-Gravitacional
 icbm.explosive.ender=Ender
+icbm.explosive.hypersonic=Sónico
 
 icbm.explosive.antimatter=Antimateria
 icbm.explosive.redMatter=Materia Roja
