--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -32,6 +32,7 @@ icbm.explosive.hypersonic=Hypersonic
 icbm.explosive.antimatter=Antimatter
 icbm.explosive.redMatter=Red Matter
 
+icbm.missile.missileModule=Missile Module
 icbm.missile.antiBallistic=Anti-ballistic
 icbm.missile.cluster=Cluster
 icbm.missile.nuclearCluster=Nuclear Cluster
