--- a/resources/icbm/yuyan/es_ES.properties
+++ b/resources/icbm/yuyan/es_ES.properties
@@ -12,30 +12,30 @@ icbm.explosive.conventional=Convencional
 icbm.explosive.condensed=Condensado
 icbm.explosive.shrapnel=Esquirla
 icbm.explosive.incendiary=Incendiario
-icbm.explosive.chemical=Químico
+icbm.explosive.chemical=Qu\u00EDmico
 icbm.explosive.anvil=Yunque
 icbm.explosive.repulsive=Repulsivo
 icbm.explosive.attractive=Atractivo
 
-icbm.explosive.fragmentation=Fragmentación
+icbm.explosive.fragmentation=Fragmentaci\u00F3n
 icbm.explosive.contagious=Contagioso
-icbm.explosive.sonic=Sónico
+icbm.explosive.sonic=S\u00F3nico
 icbm.explosive.breaching=Penetrante
 icbm.explosive.rejuvenation=Rejuvenecimiento
-icbm.explosive.thermobaric=Termobárico
+icbm.explosive.thermobaric=Termob\u00E1rico
 
 icbm.explosive.nuclear=Nuclear
 icbm.explosive.emp=PEM
-icbm.explosive.conflagration=Conflagración
-icbm.explosive.endothermic=Endotérmico
+icbm.explosive.conflagration=Conflagraci\u00F3n
+icbm.explosive.endothermic=Endot\u00E9rmico
 icbm.explosive.antiGravitational=Anti-Gravitacional
 icbm.explosive.ender=Ender
-icbm.explosive.hypersonic=Sónico
+icbm.explosive.hypersonic=S\u00F3nico
 
 icbm.explosive.antimatter=Antimateria
 icbm.explosive.redMatter=Materia Roja
 
-icbm.missile.antiBallistic=Antibalístico
+icbm.missile.antiBallistic=Antibal\u00EDstico
 icbm.missile.cluster=Racimo
 icbm.missile.nuclearCluster=Racimo Nuclear
 icbm.missile.homing=Rastreador
@@ -44,13 +44,13 @@ icbm.sMine=Mina-S
 
 item.sulfur.name=Sulfuro
 item.poisonPowder.name=Polvo Venenoso
-item.antidote.name=Antídoto
+item.antidote.name=Ant\u00EDdoto
 item.radarGun.name=Pistola Radar
 item.remoteDetonator.name=Detonador Remoto
 item.defuser.name=Desactivador
-item.laserDesignator.name=Designador Láser
+item.laserDesignator.name=Designador L\u00E1ser
 item.tracker.name=Rastreador
-item.signalDisrupter.name=Disruptor de Señal
+item.signalDisrupter.name=Disruptor de Se\u00F1al
 
 item.bullet.0.name=Bala Convencional
 item.bullet.1.name=Bala Antimateria
@@ -69,13 +69,13 @@ item.machine.5.name=Panel de Control de Lanzacohetes T3
 item.machine.6.name=Marco de Soporte para Lanzacohetes T1
 item.machine.7.name=Marco de Soporte para Lanzacohetes T2
 item.machine.8.name=Marco de Soporte para Lanzacohetes T3
-item.machine.9.name=Estación de Radar
+item.machine.9.name=Estaci\u00F3n de Radar
 item.machine.10.name=Torre de PEM
-item.machine.11.name=Cañón de Riel
+item.machine.11.name=Ca\u00F1\u00F3n de Riel
 item.machine.12.name=Lanzacohetes Crucero
 
 tile.sulfurOre.name=Mineral de Sulfuro
-tile.glassPressurePlate.name=Placa a Presión de Vidrio
-tile.glassButton.name=Botón de Vidrio
+tile.glassPressurePlate.name=Placa a Presi\u00F3n de Vidrio
+tile.glassButton.name=Bot\u00F3n de Vidrio
 tile.camouflage.name=Camuflaje
 tile.proximityDetector.name=Detector de Proximidad
