--- a/resources/icbm/yuyan/zh_CN.properties
+++ b/resources/icbm/yuyan/zh_CN.properties
@@ -3,77 +3,79 @@ children=zh_TW,
 
 itemGroup.ICBM=ICBM
 
-icbm.explosive=爆炸物
-icbm.missile=導彈
-icbm.grenade=手榴彈
+icbm.explosive=\u7206\u70B8\u7269
+icbm.missile=\u5C0E\u5F48
+icbm.grenade=\u624B\u69B4\u5F48
 
-icbm.explosive.conventional=常規性
-icbm.explosive.condensed=壓縮性
-icbm.explosive.shrapnel=分裂性
-icbm.explosive.incendiary=燃燒
-icbm.explosive.chemical=化學
-icbm.explosive.anvil=鐵砧
-icbm.explosive.repulsive=反抗性
-icbm.explosive.attractive=吸引性
+icbm.explosive.conventional=\u5E38\u898F\u6027
+icbm.explosive.condensed=\u58D3\u7E2E\u6027
+icbm.explosive.shrapnel=\u5206\u88C2\u6027
+icbm.explosive.incendiary=\u71C3\u71D2
+icbm.explosive.chemical=\u5316\u5B78
+icbm.explosive.anvil=\u9435\u7827
+icbm.explosive.repulsive=\u53CD\u6297\u6027
+icbm.explosive.attractive=\u5438\u5F15\u6027
 
-icbm.explosive.fragmentation=散彈
-icbm.explosive.contagious=傳染性
-icbm.explosive.sonic=音爆
-icbm.explosive.breaching=違反性
-icbm.explosive.rejuvenation=復興性
-icbm.explosive.thermobaric=溫壓
+icbm.explosive.fragmentation=\u6563\u5F48
+icbm.explosive.contagious=\u50B3\u67D3\u6027
+icbm.explosive.sonic=\u97F3\u7206
+icbm.explosive.breaching=\u9055\u53CD\u6027
+icbm.explosive.rejuvenation=\u5FA9\u8208\u6027
+icbm.explosive.thermobaric=\u6EAB\u58D3
 
-icbm.explosive.nuclear=核子
-icbm.explosive.emp=磁暴
-icbm.explosive.conflagration=燹
-icbm.explosive.endothermic=吸熱
-icbm.explosive.antiGravitational=反地心吸力
-icbm.explosive.ender=瞬移
+icbm.explosive.nuclear=\u6838\u5B50
+icbm.explosive.emp=\u78C1\u66B4
+icbm.explosive.conflagration=\u71F9
+icbm.explosive.endothermic=\u5438\u71B1
+icbm.explosive.antiGravitational=\u53CD\u5730\u5FC3\u5438\u529B
+icbm.explosive.ender=\u77AC\u79FB
+icbm.explosive.hypersonic=\u8D85\u97F3\u7206
 
-icbm.explosive.antimatter=反物質
-icbm.explosive.redMatter=紅物質
+icbm.explosive.antimatter=\u53CD\u7269\u8CEA
+icbm.explosive.redMatter=\u7D05\u7269\u8CEA
 
-icbm.missile.antiBallistic=反導彈
-icbm.missile.cluster=風暴
-icbm.missile.nuclearCluster=核子風暴
-icbm.missile.homing=追蹤
+icbm.missile.missileModule=\u5BFC\u5F39\u58F3
+icbm.missile.antiBallistic=\u53CD\u5C0E\u5F48
+icbm.missile.cluster=\u98A8\u66B4
+icbm.missile.nuclearCluster=\u6838\u5B50\u98A8\u66B4
+icbm.missile.homing=\u8FFD\u8E64
 
-icbm.sMine=S型地雷
+icbm.sMine=S\u578B\u5730\u96F7
 
-item.sulfur.name=硫礦
-item.poisonPowder.name=毒粉
-item.antidote.name=解藥
-item.radarGun.name=雷達探測器
-item.remoteDetonator.name=遙控引爆器
-item.defuser.name=擴散器
-item.laserDesignator.name=鐳射指示符
-item.tracker.name=跟蹤器
-item.signalDisrupter.name=信號干擾器
+item.sulfur.name=\u786B\u7926
+item.poisonPowder.name=\u6BD2\u7C89
+item.antidote.name=\u89E3\u85E5
+item.radarGun.name=\u96F7\u9054\u63A2\u6E2C\u5668
+item.remoteDetonator.name=\u9059\u63A7\u5F15\u7206\u5668
+item.defuser.name=\u64F4\u6563\u5668
+item.laserDesignator.name=\u9433\u5C04\u6307\u793A\u7B26
+item.tracker.name=\u8DDF\u8E64\u5668
+item.signalDisrupter.name=\u4FE1\u865F\u5E72\u64FE\u5668
 
-item.bullet.0.name=常規子彈
-item.bullet.1.name=反物質子彈
-item.launcher.name=火箭炮
+item.bullet.0.name=\u5E38\u898F\u5B50\u5F48
+item.bullet.1.name=\u53CD\u7269\u8CEA\u5B50\u5F48
+item.launcher.name=\u706B\u7BAD\u70AE
 
-item.spike.0.name=金屬釘
-item.spike.1.name=毒釘
-item.spike.2.name=火焰釘
+item.spike.0.name=\u91D1\u5C6C\u91D8
+item.spike.1.name=\u6BD2\u91D8
+item.spike.2.name=\u706B\u7130\u91D8
 
-item.machine.0.name=發射台 （一级）
-item.machine.1.name=發射台 （二级）
-item.machine.2.name=發射台 （三级）
-item.machine.3.name=控制台 （一级）
-item.machine.4.name=控制台 （二级）
-item.machine.5.name=控制台 （三级）
-item.machine.6.name=發射台支撐架 （一级
-item.machine.7.name=發射台支撐架 （二级
-item.machine.8.name=發射台支撐架 （三级）
-item.machine.9.name=雷達站
-item.machine.10.name=磁暴塔
-item.machine.11.name=軌道炮
-item.machine.12.name=巡航系統
+item.machine.0.name=\u767C\u5C04\u53F0 \uFF08\u4E00\u7EA7\uFF09
+item.machine.1.name=\u767C\u5C04\u53F0 \uFF08\u4E8C\u7EA7\uFF09
+item.machine.2.name=\u767C\u5C04\u53F0 \uFF08\u4E09\u7EA7\uFF09
+item.machine.3.name=\u63A7\u5236\u53F0 \uFF08\u4E00\u7EA7\uFF09
+item.machine.4.name=\u63A7\u5236\u53F0 \uFF08\u4E8C\u7EA7\uFF09
+item.machine.5.name=\u63A7\u5236\u53F0 \uFF08\u4E09\u7EA7\uFF09
+item.machine.6.name=\u767C\u5C04\u53F0\u652F\u6490\u67B6 \uFF08\u4E00\u7EA7
+item.machine.7.name=\u767C\u5C04\u53F0\u652F\u6490\u67B6 \uFF08\u4E8C\u7EA7
+item.machine.8.name=\u767C\u5C04\u53F0\u652F\u6490\u67B6 \uFF08\u4E09\u7EA7\uFF09
+item.machine.9.name=\u96F7\u9054\u7AD9
+item.machine.10.name=\u78C1\u66B4\u5854
+item.machine.11.name=\u8ECC\u9053\u70AE
+item.machine.12.name=\u5DE1\u822A\u7CFB\u7D71
 
-tile.sulfurOre.name=硫礦石
-tile.glassPressurePlate.name=玻璃感應板
-tile.glassButton.name=玻璃按鈕
-tile.camouflage.name=偽裝
-tile.proximityDetector.name=地區探測器
+tile.sulfurOre.name=\u786B\u7926\u77F3
+tile.glassPressurePlate.name=\u73BB\u7483\u611F\u61C9\u677F
+tile.glassButton.name=\u73BB\u7483\u6309\u9215
+tile.camouflage.name=\u507D\u88DD
+tile.proximityDetector.name=\u5730\u5340\u63A2\u6E2C\u5668
