A lot of language tweaks and organization

--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -1,45 +1,7 @@
 
 itemGroup.ICBM=ICBM
 
-icbm.explosive=Explosive
-icbm.missile=Missile
-icbm.grenade=Grenade
-
-icbm.explosive.conventional=Conventional
-icbm.explosive.condensed=Condensed
-icbm.explosive.shrapnel=Shrapnel
-icbm.explosive.incendiary=Incendiary
-icbm.explosive.chemical=Chemical
-icbm.explosive.anvil=Anvil
-icbm.explosive.repulsive=Repulsive
-icbm.explosive.attractive=Attractive
-
-icbm.explosive.fragmentation=Fragmentation
-icbm.explosive.contagious=Contagious
-icbm.explosive.sonic=Sonic
-icbm.explosive.breaching=Breaching
-icbm.explosive.rejuvenation=Rejuvenation
-icbm.explosive.thermobaric=Thermobaric
-
-icbm.explosive.nuclear=Nuclear
-icbm.explosive.emp=EMP
-icbm.explosive.conflagration=Conflagration
-icbm.explosive.endothermic=Endothermic
-icbm.explosive.antiGravitational=Anti-Gravitational
-icbm.explosive.ender=Ender
-icbm.explosive.hypersonic=Hypersonic
-
-icbm.explosive.antimatter=Antimatter
-icbm.explosive.redMatter=Red Matter
-
-icbm.missile.missileModule=Missile Module
-icbm.missile.antiBallistic=Anti-ballistic
-icbm.missile.cluster=Cluster
-icbm.missile.nuclearCluster=Nuclear Cluster
-icbm.missile.homing=Homing
-
-icbm.sMine=S-Mine
-
+## Items
 item.sulfur.name=Sulfur
 item.poisonPowder.name=Poison Powder
 item.antidote.name=Antidote
@@ -54,26 +16,117 @@ item.bullet.0.name=Conventional Bullet
 item.bullet.1.name=Antimatter Bullet
 item.launcher.name=Rocket Launcher
 
-item.spike.0.name=Spikes
-item.spike.1.name=Poison Spikes
-item.spike.2.name=Flammable Spikes
+## ICBM Machines
+icbm.machine.0.name=Launcher Platform T1
+icbm.machine.1.name=Launcher Platform T2
+icbm.machine.2.name=Launcher Platform T3
+icbm.machine.3.name=Launcher Control Panel T1
+icbm.machine.4.name=Launcher Control Panel T2
+icbm.machine.5.name=Launcher Control Panel T3
+icbm.machine.6.name=Launcher Support Frame T1
+icbm.machine.7.name=Launcher Support Frame T2
+icbm.machine.8.name=Launcher Support Frame T3
+icbm.machine.9.name=Radar Station
+icbm.machine.10.name=EMP Tower
+icbm.machine.11.name=Railgun
+icbm.machine.12.name=Cruise Launcher
 
-item.machine.0.name=Launcher Platform T1
-item.machine.1.name=Launcher Platform T2
-item.machine.2.name=Launcher Platform T3
-item.machine.3.name=Launcher Control Panel T1
-item.machine.4.name=Launcher Control Panel T2
-item.machine.5.name=Launcher Control Panel T3
-item.machine.6.name=Launcher Support Frame T1
-item.machine.7.name=Launcher Support Frame T2
-item.machine.8.name=Launcher Support Frame T3
-item.machine.9.name=Radar Station
-item.machine.10.name=EMP Tower
-item.machine.11.name=Railgun
-item.machine.12.name=Cruise Launcher
+## ICBM Explosives
 
+## Block Form
+icbm.explosive.condensed=Condensed Explosives
+icbm.explosive.shrapnel=Shrapnel Explosives
+icbm.explosive.incendiary=Incendiary Explosives
+icbm.explosive.chemical=Chemical Explosives
+icbm.explosive.anvil=Anvil Explosives
+icbm.explosive.repulsive=Repulsive Explosives
+icbm.explosive.attractive=Attractive Explosives
+
+icbm.explosive.fragmentation=Fragmentation Explosives
+icbm.explosive.contagious=Contagious Explosives
+icbm.explosive.sonic=Sonic Explosives
+icbm.explosive.breaching=Breaching Explosives
+icbm.explosive.rejuvenation=Rejuvenation Explosives
+icbm.explosive.thermobaric=Thermobaric Explosives
+
+icbm.explosive.nuclear=Nuclear Explosives
+icbm.explosive.emp=EMP Explosives
+icbm.explosive.conflagration=Conflagration Explosives
+icbm.explosive.endothermic=Endothermic Explosives
+icbm.explosive.antiGravitational=Anti-Gravitational Explosives
+icbm.explosive.ender=Ender Explosives
+icbm.explosive.hypersonic=Hypersonic Explosives
+
+icbm.explosive.antimatter=Antimatter Explosives
+icbm.explosive.redMatter=Red Matter Explosives
+
+icbm.explosive.sMine=S-Mine
+
+## Missile Form
+icbm.missile.condensed=Conventional Missile
+icbm.missile.shrapnel=Shrapnel Missile
+icbm.missile.incendiary=Incendiary Missile
+icbm.missile.chemical=Chemical Missile
+icbm.missile.anvil=Anvil Missile
+icbm.missile.repulsive=Repulsive Missile
+icbm.missile.attractive=Attractive Missile
+
+icbm.missile.fragmentation=Fragmentation Missile
+icbm.missile.contagious=Contagious Missile
+icbm.missile.sonic=Sonic Missile
+icbm.missile.breaching=Breaching Missile
+icbm.missile.rejuvenation=Rejuvenation Missile
+icbm.missile.thermobaric=Thermobaric Missile
+
+icbm.missile.nuclear=Nuclear Missile
+icbm.missile.emp=EMP Missile
+icbm.missile.conflagration=Conflagration Missile
+icbm.missile.endothermic=Endothermic Missile
+icbm.missile.antiGravitational=Anti-Gravitational Missile
+icbm.missile.ender=Ender Missile
+icbm.missile.hypersonic=Hypersonic Missile
+
+icbm.missile.antimatter=Antimatter Missile
+icbm.missile.redMatter=Red Matter Missile
+
+## Special Missiles
+icbm.missile.missileModule=Missile Module
+icbm.missile.antiBallistic=Anti-ballistic Missile
+icbm.missile.cluster=Cluster Missile
+icbm.missile.nuclearCluster=Nuclear Cluster Missile
+icbm.missile.homing=Homing Missile
+
+## Grenades
+icbm.grenade.condensed=Conventional Grenade
+icbm.grenade.shrapnel=Shrapnel Grenade
+icbm.grenade.incendiary=Incendiary Grenade
+icbm.grenade.chemical=Chemical Grenade
+icbm.grenade.anvil=Anvil Grenade
+icbm.grenade.repulsive=Repulsive Grenade
+icbm.grenade.attractive=Attractive Grenade
+
+## Explosive Minecarts
+icbm.minecart.condensed=Explosive Cart
+icbm.minecart.shrapnel=Shrapnel Minecart
+icbm.minecart.incendiary=Incendiary Minecart
+icbm.minecart.chemical=Chemical Minecart
+icbm.minecart.anvil=Anvil Minecart
+icbm.minecart.repulsive=Repulsive Minecart
+icbm.minecart.attractive=Attractive Minecart
+
+icbm.minecart.fragmentation=Fragmentation Minecart
+icbm.minecart.contagious=Contagious Minecart
+icbm.minecart.sonic=Sonic Minecart
+icbm.minecart.breaching=Breaching Minecart
+icbm.minecart.rejuvenation=Rejuvenation Minecart
+icbm.minecart.thermobaric=Thermobaric Minecart
+
+## ICBM Misc Blocks
 tile.sulfurOre.name=Sulfur Ore
 tile.glassPressurePlate.name=Glass Pressure Plate
 tile.glassButton.name=Glass Button
 tile.camouflage.name=Camouflage
 tile.proximityDetector.name=Proximity Detector
+tile.spike.0.name=Spikes
+tile.spike.1.name=Poison Spikes
+tile.spike.2.name=Flammable Spikes
