Fixed bugs made in airplane

--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -34,92 +34,92 @@ icbm.machine.12.name=Cruise Launcher
 ## ICBM Explosives
 
 ## Block Form
-icbm.explosive.condensed=Condensed Explosives
-icbm.explosive.shrapnel=Shrapnel Explosives
-icbm.explosive.incendiary=Incendiary Explosives
-icbm.explosive.chemical=Chemical Explosives
-icbm.explosive.anvil=Anvil Explosives
-icbm.explosive.repulsive=Repulsive Explosives
-icbm.explosive.attractive=Attractive Explosives
+icbm.explosive.condensed.name=Condensed Explosives
+icbm.explosive.shrapnel.name=Shrapnel Explosives
+icbm.explosive.incendiary.name=Incendiary Explosives
+icbm.explosive.chemical.name=Chemical Explosives
+icbm.explosive.anvil.name=Anvil Explosives
+icbm.explosive.repulsive.name=Repulsive Explosives
+icbm.explosive.attractive.name=Attractive Explosives
 
-icbm.explosive.fragmentation=Fragmentation Explosives
-icbm.explosive.contagious=Contagious Explosives
-icbm.explosive.sonic=Sonic Explosives
-icbm.explosive.breaching=Breaching Explosives
-icbm.explosive.rejuvenation=Rejuvenation Explosives
-icbm.explosive.thermobaric=Thermobaric Explosives
+icbm.explosive.fragmentation.name=Fragmentation Explosives
+icbm.explosive.contagious.name=Contagious Explosives
+icbm.explosive.sonic.name=Sonic Explosives
+icbm.explosive.breaching.name=Breaching Explosives
+icbm.explosive.rejuvenation.name=Rejuvenation Explosives
+icbm.explosive.thermobaric.name=Thermobaric Explosives
 
-icbm.explosive.nuclear=Nuclear Explosives
-icbm.explosive.emp=EMP Explosives
-icbm.explosive.conflagration=Conflagration Explosives
-icbm.explosive.endothermic=Endothermic Explosives
-icbm.explosive.antiGravitational=Anti-Gravitational Explosives
-icbm.explosive.ender=Ender Explosives
-icbm.explosive.hypersonic=Hypersonic Explosives
+icbm.explosive.nuclear.name=Nuclear Explosives
+icbm.explosive.emp.name=EMP Explosives
+icbm.explosive.conflagration.name=Conflagration Explosives
+icbm.explosive.endothermic.name=Endothermic Explosives
+icbm.explosive.antiGravitational.name=Anti-Gravitational Explosives
+icbm.explosive.ender.name=Ender Explosives
+icbm.explosive.hypersonic.name=Hypersonic Explosives
 
-icbm.explosive.antimatter=Antimatter Explosives
-icbm.explosive.redMatter=Red Matter Explosives
+icbm.explosive.antimatter.name=Antimatter Explosives
+icbm.explosive.redMatter.name=Red Matter Explosives
 
-icbm.explosive.sMine=S-Mine
+icbm.explosive.sMine.name=S-Mine
 
 ## Missile Form
-icbm.missile.condensed=Conventional Missile
-icbm.missile.shrapnel=Shrapnel Missile
-icbm.missile.incendiary=Incendiary Missile
-icbm.missile.chemical=Chemical Missile
-icbm.missile.anvil=Anvil Missile
-icbm.missile.repulsive=Repulsive Missile
-icbm.missile.attractive=Attractive Missile
+icbm.missile.condensed.name=Conventional Missile
+icbm.missile.shrapnel.name=Shrapnel Missile
+icbm.missile.incendiary.name=Incendiary Missile
+icbm.missile.chemical.name=Chemical Missile
+icbm.missile.anvil.name=Anvil Missile
+icbm.missile.repulsive.name=Repulsive Missile
+icbm.missile.attractive.name=Attractive Missile
 
-icbm.missile.fragmentation=Fragmentation Missile
-icbm.missile.contagious=Contagious Missile
-icbm.missile.sonic=Sonic Missile
-icbm.missile.breaching=Breaching Missile
-icbm.missile.rejuvenation=Rejuvenation Missile
-icbm.missile.thermobaric=Thermobaric Missile
+icbm.missile.fragmentation.name=Fragmentation Missile
+icbm.missile.contagious.name=Contagious Missile
+icbm.missile.sonic.name=Sonic Missile
+icbm.missile.breaching.name=Breaching Missile
+icbm.missile.rejuvenation.name=Rejuvenation Missile
+icbm.missile.thermobaric.name=Thermobaric Missile
 
-icbm.missile.nuclear=Nuclear Missile
-icbm.missile.emp=EMP Missile
-icbm.missile.conflagration=Conflagration Missile
-icbm.missile.endothermic=Endothermic Missile
-icbm.missile.antiGravitational=Anti-Gravitational Missile
-icbm.missile.ender=Ender Missile
-icbm.missile.hypersonic=Hypersonic Missile
+icbm.missile.nuclear.name=Nuclear Missile
+icbm.missile.emp.name=EMP Missile
+icbm.missile.conflagration.name=Conflagration Missile
+icbm.missile.endothermic.name=Endothermic Missile
+icbm.missile.antiGravitational.name=Anti-Gravitational Missile
+icbm.missile.ender.name=Ender Missile
+icbm.missile.hypersonic.name=Hypersonic Missile
 
-icbm.missile.antimatter=Antimatter Missile
-icbm.missile.redMatter=Red Matter Missile
+icbm.missile.antimatter.name=Antimatter Missile
+icbm.missile.redMatter.name=Red Matter Missile
 
 ## Special Missiles
-icbm.missile.missileModule=Missile Module
-icbm.missile.antiBallistic=Anti-ballistic Missile
-icbm.missile.cluster=Cluster Missile
-icbm.missile.nuclearCluster=Nuclear Cluster Missile
-icbm.missile.homing=Homing Missile
+icbm.missile.missileModule.name=Missile Module
+icbm.missile.antiBallistic.name=Anti-ballistic Missile
+icbm.missile.cluster.name=Cluster Missile
+icbm.missile.nuclearCluster.name=Nuclear Cluster Missile
+icbm.missile.homing.name=Homing Missile
 
 ## Grenades
-icbm.grenade.condensed=Conventional Grenade
-icbm.grenade.shrapnel=Shrapnel Grenade
-icbm.grenade.incendiary=Incendiary Grenade
-icbm.grenade.chemical=Chemical Grenade
-icbm.grenade.anvil=Anvil Grenade
-icbm.grenade.repulsive=Repulsive Grenade
-icbm.grenade.attractive=Attractive Grenade
+icbm.grenade.condensed.name=Conventional Grenade
+icbm.grenade.shrapnel.name=Shrapnel Grenade
+icbm.grenade.incendiary.name=Incendiary Grenade
+icbm.grenade.chemical.name=Chemical Grenade
+icbm.grenade.anvil.name=Anvil Grenade
+icbm.grenade.repulsive.name=Repulsive Grenade
+icbm.grenade.attractive.name=Attractive Grenade
 
 ## Explosive Minecarts
-icbm.minecart.condensed=Explosive Cart
-icbm.minecart.shrapnel=Shrapnel Minecart
-icbm.minecart.incendiary=Incendiary Minecart
-icbm.minecart.chemical=Chemical Minecart
-icbm.minecart.anvil=Anvil Minecart
-icbm.minecart.repulsive=Repulsive Minecart
-icbm.minecart.attractive=Attractive Minecart
+icbm.minecart.condensed.name=Explosive Cart
+icbm.minecart.shrapnel.name=Shrapnel Minecart
+icbm.minecart.incendiary.name=Incendiary Minecart
+icbm.minecart.chemical.name=Chemical Minecart
+icbm.minecart.anvil.name=Anvil Minecart
+icbm.minecart.repulsive.name=Repulsive Minecart
+icbm.minecart.attractive.name=Attractive Minecart
 
-icbm.minecart.fragmentation=Fragmentation Minecart
-icbm.minecart.contagious=Contagious Minecart
-icbm.minecart.sonic=Sonic Minecart
-icbm.minecart.breaching=Breaching Minecart
-icbm.minecart.rejuvenation=Rejuvenation Minecart
-icbm.minecart.thermobaric=Thermobaric Minecart
+icbm.minecart.fragmentation.name=Fragmentation Minecart
+icbm.minecart.contagious.name=Contagious Minecart
+icbm.minecart.sonic.name=Sonic Minecart
+icbm.minecart.breaching.name=Breaching Minecart
+icbm.minecart.rejuvenation.name=Rejuvenation Minecart
+icbm.minecart.thermobaric.name=Thermobaric Minecart
 
 ## ICBM Misc Blocks
 tile.sulfurOre.name=Sulfur Ore
