--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -51,7 +51,7 @@ icbm.explosive.thermobaric.name=Thermobaric Explosives
 
 icbm.explosive.nuclear.name=Nuclear Explosives
 icbm.explosive.emp.name=EMP Explosives
-icbm.explosive.conflagration.name=Conflagration Explosives
+icbm.explosive.exothermic.name=Exothermic Explosives
 icbm.explosive.endothermic.name=Endothermic Explosives
 icbm.explosive.antiGravitational.name=Anti-Gravitational Explosives
 icbm.explosive.ender.name=Ender Explosives
