--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -30,6 +30,7 @@ icbm.machine.9.name=Radar Station
 icbm.machine.10.name=EMP Tower
 icbm.machine.11.name=Railgun
 icbm.machine.12.name=Cruise Launcher
+icbm.machine.13.name=Missile Coordinator
 
 ## ICBM Explosives
 
