Added sentry code

--- a/resources/icbm/yuyan/en_US.properties
+++ b/resources/icbm/yuyan/en_US.properties
@@ -80,7 +80,7 @@ icbm.missile.thermobaric.name=Thermobaric Missile
 
 icbm.missile.nuclear.name=Nuclear Missile
 icbm.missile.emp.name=EMP Missile
-icbm.missile.conflagration.name=Conflagration Missile
+icbm.missile.exothermic.name=Exothermic Missile
 icbm.missile.endothermic.name=Endothermic Missile
 icbm.missile.antiGravitational.name=Anti-Gravitational Missile
 icbm.missile.ender.name=Ender Missile
