Fixed all textures

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -122,11 +122,11 @@ icbm.minecart.rejuvenation.name=Rejuvenation Minecart
 icbm.minecart.thermobaric.name=Thermobaric Minecart
 
 ## ICBM Misc Blocks
-tile.icbm\:sulfurOre.name=Sulfur Ore
+tile.icbm\:oreSulfur.name=Sulfur Ore
 tile.icbm\:glassPressurePlate.name=Glass Pressure Plate
 tile.icbm\:glassButton.name=Glass Button
 tile.icbm\:camouflage.name=Camouflage
 tile.icbm\:proximityDetector.name=Proximity Detector
-tile.icbm\:spike.0.name=Spikes
-tile.icbm\:spike.1.name=Poison Spikes
-tile.icbm\:spike.2.name=Flammable Spikes
+tile.icbm\:spikes.0.name=Spikes
+tile.icbm\:spikes.1.name=Poison Spikes
+tile.icbm\:spikes.2.name=Flammable Spikes
