--- a/resources/mods/icbmsentry/languages/en_US.properties
+++ b/resources/mods/icbmsentry/languages/en_US.properties
@@ -2,11 +2,11 @@
 
 itemGroup.ICBM=ICBM
 
-tile.turret.0.name=Gun Turret
-tile.turret.1.name=Railgun
-tile.turretPlatform.name=Turret Platform
+tile.icbmsentry\:turret.0.name=Gun Turret
+tile.icbmsentry\:turret.1.name=Railgun
+tile.icbmsentry\:turretPlatform.name=Turret Platform
 
-item.ammo.0.name=Bullet Shell
-item.ammo.1.name=Bullet
-item.ammo.2.name=Railgun Bullet
-item.ammo.3.name=Antimatter Bullet
+item.icbmsentry\:bulletShell.name=Bullet Shell
+item.icbmsentry\:bullet.name=Bullet
+item.icbmsentry\:bulletRailgun.name=Railgun Bullet
+item.icbmsentry\:bulletAntimatter.name=Antimatter Bullet
