Added potion ID config

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -1,6 +1,9 @@
 
 itemGroup.ICBM=ICBM
 
+potion.toxin=Toxin
+potion.frostBite=Frost Bite
+
 ## Items
 item.icbm\:sulfur.name=Sulfur
 item.icbm\:poisonPowder.name=Poison Powder
