--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -4,6 +4,7 @@ itemGroup.ICBM=ICBM
 potion.toxin=Toxin
 potion.virus=Virus
 potion.frostBite=Frost Bite
+potion.radiation=Radiation
 
 ## Items
 item.icbm\:sulfur.name=Sulfur
@@ -127,6 +128,9 @@ icbm.minecart.thermobaric.name=Thermobaric Minecart
 
 ## ICBM Misc Blocks
 tile.icbm\:oreSulfur.name=Sulfur Ore
+tile.icbm\:concrete.name=Concrete
+tile.icbm\:concreteCompact.name=Compact Concrete
+tile.icbm\:concreteReinforced.name=Reinforced Concrete
 tile.icbm\:glassPressurePlate.name=Glass Pressure Plate
 tile.icbm\:glassButton.name=Glass Button
 tile.icbm\:camouflage.name=Camouflage
