--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -131,6 +131,7 @@ tile.icbm\:oreSulfur.name=Sulfur Ore
 tile.icbm\:concrete.name=Concrete
 tile.icbm\:concreteCompact.name=Compact Concrete
 tile.icbm\:concreteReinforced.name=Reinforced Concrete
+tile.icbm\:glassReinforced.name=Reinforced Glass
 tile.icbm\:glassPressurePlate.name=Glass Pressure Plate
 tile.icbm\:glassButton.name=Glass Button
 tile.icbm\:camouflage.name=Camouflage
