Fixed minor random bugs (#178)

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -19,7 +19,7 @@ item.icbm\:signalDisrupter.name=Signal Disrupter
 
 item.icbm\:bullet.0.name=Conventional Bullet
 item.icbm\:bullet.1.name=Antimatter Bullet
-item.icbm\:launcher.name=Rocket Launcher
+item.icbm\:rocketLauncher.name=Rocket Launcher
 
 ## ICBM Machines
 icbm.machine.0.name=Launcher Platform T1
