--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -42,6 +42,7 @@ icbm.machine.12.name=Missile Coordinator
 icbm.explosive.condensed.name=Condensed Explosives
 icbm.explosive.shrapnel.name=Shrapnel Explosives
 icbm.explosive.incendiary.name=Incendiary Explosives
+icbm.explosive.debilitation.name=Debilitation Explosives
 icbm.explosive.chemical.name=Chemical Explosives
 icbm.explosive.anvil.name=Anvil Explosives
 icbm.explosive.repulsive.name=Repulsive Explosives
@@ -71,6 +72,7 @@ icbm.explosive.sMine.name=S-Mine
 icbm.missile.condensed.name=Conventional Missile
 icbm.missile.shrapnel.name=Shrapnel Missile
 icbm.missile.incendiary.name=Incendiary Missile
+icbm.missile.debilitation.name=Debilitation Missile
 icbm.missile.chemical.name=Chemical Missile
 icbm.missile.anvil.name=Anvil Missile
 icbm.missile.repulsive.name=Repulsive Missile
@@ -105,6 +107,7 @@ icbm.missile.homing.name=Homing Missile
 icbm.grenade.condensed.name=Conventional Grenade
 icbm.grenade.shrapnel.name=Shrapnel Grenade
 icbm.grenade.incendiary.name=Incendiary Grenade
+icbm.grenade.debilitation.name=Debilitation Grenade
 icbm.grenade.chemical.name=Chemical Grenade
 icbm.grenade.anvil.name=Anvil Grenade
 icbm.grenade.repulsive.name=Repulsive Grenade
@@ -114,6 +117,7 @@ icbm.grenade.attractive.name=Attractive Grenade
 icbm.minecart.condensed.name=Explosive Cart
 icbm.minecart.shrapnel.name=Shrapnel Minecart
 icbm.minecart.incendiary.name=Incendiary Minecart
+icbm.minecart.debilitation.name=Debilitation Minecart
 icbm.minecart.chemical.name=Chemical Minecart
 icbm.minecart.anvil.name=Anvil Minecart
 icbm.minecart.repulsive.name=Repulsive Minecart
