Updated to MC 1.5.1

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -148,6 +148,7 @@ tile.icbm\:spikes.2.name=Flammable Spikes
 ## Translated by Calclavia
 tile.icbm\:turret.0.name=Gun Turret
 tile.icbm\:turret.1.name=Railgun
+tile.icbm\:turret.2.name=AA Turret
 tile.icbm\:turretPlatform.name=Turret Platform
 
 item.icbm\:bulletShell.name=Bullet Shell
