Fixed infinite battery naming

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -155,3 +155,4 @@ item.icbm\:bulletShell.name=Bullet Shell
 item.icbm\:bullet.name=Bullet
 item.icbm\:bulletRailgun.name=Railgun Bullet
 item.icbm\:bulletAntimatter.name=Antimatter Bullet
+item.icbm\:bulletInfinite.name=Infinite Bullet
