--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -156,3 +156,6 @@ item.icbm\:bullet.name=Bullet
 item.icbm\:bulletRailgun.name=Railgun Bullet
 item.icbm\:bulletAntimatter.name=Antimatter Bullet
 item.icbm\:bulletInfinite.name=Infinite Bullet
+
+item.icbm\:TargetCard.name =Target Range Upgrade
+item.icbm\:ShellCollector.name =Shell Collector Upgrade
