Starting Sentry overhaul

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -157,5 +157,5 @@ item.icbm\:bulletRailgun.name=Railgun Bullet
 item.icbm\:bulletAntimatter.name=Antimatter Bullet
 item.icbm\:bulletInfinite.name=Infinite Bullet
 
-item.icbm\:TargetCard.name =Target Range Upgrade
-item.icbm\:ShellCollector.name =Shell Collector Upgrade
+item.icbm\:targetCard.name=Target Range Upgrade
+item.icbm\:shellCollector.name=Shell Collector Upgrade
