Added laser turret

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -149,6 +149,7 @@ tile.icbm\:spikes.2.name=Flammable Spikes
 tile.icbm\:turret.0.name=Gun Turret
 tile.icbm\:turret.1.name=Railgun
 tile.icbm\:turret.2.name=AA Turret
+tile.icbm\:turret.3.name=Laser Turret
 tile.icbm\:turretPlatform.name=Turret Platform
 
 item.icbm\:bulletShell.name=Bullet Shell
