Fixed ability to change your own turret status

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -158,5 +158,5 @@ item.icbm\:bulletRailgun.name=Railgun Bullet
 item.icbm\:bulletAntimatter.name=Antimatter Bullet
 item.icbm\:bulletInfinite.name=Infinite Bullet
 
-item.icbm\:targetCard.name=Target Range Upgrade
+item.icbm\:targetCard.name=Range Upgrade
 item.icbm\:shellCollector.name=Shell Collector Upgrade
