--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -160,3 +160,7 @@ item.icbm\:bulletInfinite.name=Infinite Bullet
 
 item.icbm\:targetCard.name=Range Upgrade
 item.icbm\:shellCollector.name=Shell Collector Upgrade
+
+## Deaths
+death.attack.bullet=%1$s was completely gunned down.
+death.attack.bullet=%1$s was vaporized by lasers!
