Fixed turret range upgrade not working

--- a/resources/mods/icbm/yuyan/en_US.properties
+++ b/resources/mods/icbm/yuyan/en_US.properties
@@ -162,5 +162,5 @@ item.icbm\:targetCard.name=Range Upgrade
 item.icbm\:shellCollector.name=Shell Collector Upgrade
 
 ## Deaths
-death.attack.bullet=%1$s was completely gunned down.
-death.attack.bullet=%1$s was vaporized by lasers!
+death.attack.bullet=%1$s was shot into a swiss cheese!
+death.attack.laser=%1$s was vaporized by lasers!
