--- a/resources/assets/icbm/yuyan/de_DE.properties
+++ b/resources/assets/icbm/yuyan/de_DE.properties
@@ -1,132 +1,166 @@
-
+## Translated by Vexatos
 itemGroup.ICBM=ICBM
 
-## Items
-item.sulfur.name=Schwefel
-item.poisonPowder.name=Gift Pulver
-item.antidote.name=Gegengift
-item.radarGun.name=Radar Pistole
-item.remoteDetonator.name=Fernzünder
-item.defuser.name=Entschärfer
-item.laserDesignator.name=Laser Ziel Erfasser
-item.tracker.name=Verfolger
-item.signalDisrupter.name=Signal Störer
+potion.toxin=Toxin
+potion.virus=Virus
+potion.frostBite=Erfrierung
+potion.radiation=Strahlung
 
-item.bullet.0.name=Stanard Geschoss
-item.bullet.1.name=Antimatierie Geschoss
-item.launcher.name=Raketen Werfer
+## Items
+item.icbm\:sulfur.name=Schwefel
+item.icbm\:poisonPowder.name=Giftpulver
+item.icbm\:antidote.name=Gegengift
+item.icbm\:radarGun.name=Radar-Pistole
+item.icbm\:remoteDetonator.name=Fernz\u00FCnder
+item.icbm\:defuser.name=Entsch\u00E4rfer
+item.icbm\:laserDesignator.name=Laser-Zielerfasser
+item.icbm\:tracker.name=Verfolger
+item.icbm\:signalDisrupter.name=Signalst\u00F6rer
+
+item.icbm\:bullet.0.name=Stanard-Geschoss
+item.icbm\:bullet.1.name=Antimatierie-Geschoss
+item.icbm\:rocketLauncher.name=Raketenwerfer
 
 ## ICBM Machines
-icbm.machine.0.name=Startplatform T1
-icbm.machine.1.name=Startplatform T2
-icbm.machine.2.name=Startplatform T3
-icbm.machine.3.name=Start Kontroll Tafel T1
-icbm.machine.4.name=Start Kontroll Tafel T2
-icbm.machine.5.name=Start Konttoll Tafel T3
-icbm.machine.6.name=Startplatform Verstärker T1
-icbm.machine.7.name=Startplatform Verstärker T2
-icbm.machine.8.name=Startplatform Verstärker T3
-icbm.machine.9.name=Radar Station
-icbm.machine.10.name=EMP Turm
-icbm.machine.11.name=Langstrecken Starter
-icbm.machine.12.name=Raketen Koordinator
+icbm.machine.0.name=Startplattform Stufe 1
+icbm.machine.1.name=Startplattform Stufe 2
+icbm.machine.2.name=Startplattform Stufe 3
+icbm.machine.3.name=Abschuss-Steuerpult Stufe 1
+icbm.machine.4.name=Abschuss-Steuerpult Stufe 2
+icbm.machine.5.name=Abschuss-Steuerpult Stufe 3
+icbm.machine.6.name=Startplatforms-St\u00FCtzgestell Stufe 1
+icbm.machine.7.name=Startplatforms-St\u00FCtzgestell Stufe 2
+icbm.machine.8.name=Startplatforms-St\u00FCtzgestell Stufe 3
+icbm.machine.9.name=Radarstation
+icbm.machine.10.name=EMP-Turm
+icbm.machine.11.name=Mobile Startrampe
+icbm.machine.12.name=Raketen-Koordinator
 
 ## ICBM Explosives
 
 ## Block Form
-icbm.explosive.condensed.name=Gepresster Sprengstoff
-icbm.explosive.shrapnel.name=Schrapnell Sprengstoff
-icbm.explosive.incendiary.name=Entflammbarer Sprengstoff
+icbm.explosive.condensed.name=Verdichteter Sprengstoff
+icbm.explosive.shrapnel.name=Schrapnell-Sprengstoff
+icbm.explosive.incendiary.name=Brennender Sprengstoff
+icbm.explosive.debilitation.name=Entkr\u00E4ftender Sprengstoff
 icbm.explosive.chemical.name=Chemischer Sprengstoff
-icbm.explosive.anvil.name=Amboss Sprengstoff
-icbm.explosive.repulsive.name=Abstoßender Sprengstoff
+icbm.explosive.anvil.name=Amboss-Sprengstoff
+icbm.explosive.repulsive.name=Absto\u00DFender Sprengstoff
 icbm.explosive.attractive.name=Anziehener Sprengstoff
 
-icbm.explosive.fragmentation.name=Splitter Sprengstoff
+icbm.explosive.fragmentation.name=Splitternder Sprengstoff
 icbm.explosive.contagious.name=Ansteckender Sprengstoff
-icbm.explosive.sonic.name=Schall Sprengstoff
-icbm.explosive.breaching.name=Durchschlags Sprengstoff
-icbm.explosive.rejuvenation.name=Verjüngungs Sprengstoff
+icbm.explosive.sonic.name=Schall-Sprengstoff
+icbm.explosive.breaching.name=Durchschlags-Sprengstoff
+icbm.explosive.rejuvenation.name=Revitalisierungs-Sprengstoff
 icbm.explosive.thermobaric.name=Thermobarischer Sprengstoff
 
 icbm.explosive.nuclear.name=Atomarer Sprengstoff
-icbm.explosive.emp.name=EMP Sprengstoff
-icbm.explosive.exothermic.name=Exothermischer Sprengstoff
-icbm.explosive.endothermic.name=Endothermischer Sprengstoff
-icbm.explosive.antiGravitational.name=Anti-Schwerkraft Sprengstoff
-icbm.explosive.ender.name=Ender Sprengstoff
-icbm.explosive.hypersonic.name=Überschall Sprengstoff
+icbm.explosive.emp.name=EMP-Sprengstoff
+icbm.explosive.exothermic.name=Exothermer Sprengstoff
+icbm.explosive.endothermic.name=Endothermer Sprengstoff
+icbm.explosive.antiGravitational.name=Anti-Schwerkraft-Sprengstoff
+icbm.explosive.ender.name=Ender-Sprengstoff
+icbm.explosive.hypersonic.name=Hyperschall-Sprengstoff
 
-icbm.explosive.antimatter.name=Antimaterie Sprengstoff
-icbm.explosive.redMatter.name=Rotematerie Sprengstoff
+icbm.explosive.antimatter.name=Antimaterien-Sprengstoff
+icbm.explosive.redMatter.name=Rotmaterien-Sprengstoff
 
 icbm.explosive.sMine.name=S-Mine
 
 ## Missile Form
-icbm.missile.condensed.name=Standard Rakete
-icbm.missile.shrapnel.name=Schrapnell Rakete
-icbm.missile.incendiary.name=Entflammbare Rakete
+icbm.missile.condensed.name=Konventionelle Rakete
+icbm.missile.shrapnel.name=Schrapnell-Rakete
+icbm.missile.incendiary.name=Brandrakete
+icbm.missile.debilitation.name=Entkr\u00E4ftende Rakete
 icbm.missile.chemical.name=Chemische Rakete
-icbm.missile.anvil.name=Amboss Rakete
-icbm.missile.repulsive.name=Abstoßende Rakete
+icbm.missile.anvil.name=Amboss-Rakete
+icbm.missile.repulsive.name=Absto\u00DFende Rakete
 icbm.missile.attractive.name=Anziehende Rakete
 
-icbm.missile.fragmentation.name=Splitter Rakete
+icbm.missile.fragmentation.name=Splitter-Rakete
 icbm.missile.contagious.name=Ansteckende Rakete
-icbm.missile.sonic.name=Schall Rakete
-icbm.missile.breaching.name=Durchschlags Rakete
-icbm.missile.rejuvenation.name=Verjüngungs Rakete
+icbm.missile.sonic.name=Schall-Rakete
+icbm.missile.breaching.name=Durchschlags-Rakete
+icbm.missile.rejuvenation.name=Revitalisierungs-Rakete
 icbm.missile.thermobaric.name=Thermobarische Rakete
 
-icbm.missile.nuclear.name=Atom Rakete
-icbm.missile.emp.name=EMP Rakete
-icbm.missile.exothermic.name=Exothermische Rakete
-icbm.missile.endothermic.name=Endothermische Rakete
-icbm.missile.antiGravitational.name=Anti-Schwerkraft Rakete
-icbm.missile.ender.name=Ender Rakete
-icbm.missile.hypersonic.name=Überschall Rakete
+icbm.missile.nuclear.name=Atomrakete
+icbm.missile.emp.name=EMP-Rakete
+icbm.missile.exothermic.name=Exotherme-Rakete
+icbm.missile.endothermic.name=Endotherme-Rakete
+icbm.missile.antiGravitational.name=Anti-Schwerkraft-Rakete
+icbm.missile.ender.name=Ender-Rakete
+icbm.missile.hypersonic.name=Hyperschall-Rakete
 
-icbm.missile.antimatter.name=Antimaterie Rakete
-icbm.missile.redMatter.name=Rotematerie Rakete
+icbm.missile.antimatter.name=Antimaterien-Rakete
+icbm.missile.redMatter.name=Rotmaterien-Rakete
 
 ## Special Missiles
-icbm.missile.missileModule.name=Raketen Modul
-icbm.missile.antiBallistic.name=Anti-Balistische Rakete
-icbm.missile.cluster.name=Cluster Rakete
-icbm.missile.nuclearCluster.name=Atom Cluster Rakete
-icbm.missile.homing.name=Verfolgungs Rakete
+icbm.missile.missileModule.name=Raketenmodul
+icbm.missile.antiBallistic.name=Flugabwehrrakete
+icbm.missile.cluster.name=Streurakete
+icbm.missile.nuclearCluster.name=Atomare Streurakete
+icbm.missile.homing.name=Verfolgungsrakete
 
 ## Grenades
-icbm.grenade.condensed.name=Standard Granate
-icbm.grenade.shrapnel.name=Schrapnell Granate
-icbm.grenade.incendiary.name=Entzündliche Granate
+icbm.grenade.condensed.name=Konventionelle Granate
+icbm.grenade.shrapnel.name=Schrapnell-Granate
+icbm.grenade.incendiary.name=Brandgranate
+icbm.grenade.debilitation.name=Entkr\u00E4ftende Granate
 icbm.grenade.chemical.name=Chemische Granate
-icbm.grenade.anvil.name=Amboss Granate
-icbm.grenade.repulsive.name=Abstoss Granate
-icbm.grenade.attractive.name=Anziehungs Granate
+icbm.grenade.anvil.name=Amboss-Granate
+icbm.grenade.repulsive.name=Absto\u00DFende Granate
+icbm.grenade.attractive.name=Anziehende Granate
 
 ## Explosive Minecarts
 icbm.minecart.condensed.name=Explosive Lore
-icbm.minecart.shrapnel.name=Schrapnell Lore
-icbm.minecart.incendiary.name=Entzündliche Lore
+icbm.minecart.shrapnel.name=Schrapnell-Lore
+icbm.minecart.incendiary.name=Brandlore
+icbm.minecart.debilitation.name=Entkr\u00E4ftende Lore
 icbm.minecart.chemical.name=Chemische Lore
-icbm.minecart.anvil.name=Amboss Lore
-icbm.minecart.repulsive.name=Abstoss Lore
+icbm.minecart.anvil.name=Amboss-Lore
+icbm.minecart.repulsive.name=Absto\u00DFende Lore
 icbm.minecart.attractive.name=Anziehende Lore
 
-icbm.minecart.fragmentation.name=Splitter Lore
+icbm.minecart.fragmentation.name=Splitterlore
 icbm.minecart.contagious.name=Ansteckede Lore
-icbm.minecart.sonic.name=Schall Lore
+icbm.minecart.sonic.name=Schall-Lore
 icbm.minecart.breaching.name=Durchbrechende Lore
-icbm.minecart.rejuvenation.name=Verjüngungs Lore
+icbm.minecart.rejuvenation.name=Revitalisierungslore
 icbm.minecart.thermobaric.name=Thermobarische Lore
 
 ## ICBM Misc Blocks
-tile.sulfurOre.name=Schwefel Erz
-tile.glassPressurePlate.name=Glass Druckplatte
-tile.glassButton.name=Glass Knopf
-tile.camouflage.name=Camouflage
-tile.proximityDetector.name=Umgebungs Scanner
-tile.spike.0.name=Stacheln
-tile.spike.1.name=Gift Stacheln
-tile.spike.2.name=Entzündliche Stacheln
+tile.icbm\:oreSulfur.name=Schwefelerz
+tile.icbm\:concrete.name=Concrete
+tile.icbm\:concreteCompact.name=Compact Concrete
+tile.icbm\:concreteReinforced.name=Reinforced Concrete
+tile.icbm\:glassReinforced.name=Reinforced Glass
+tile.icbm\:glassPressurePlate.name=Glasdruckplatte
+tile.icbm\:glassButton.name=Glasknopf
+tile.icbm\:camouflage.name=Verh\u00FCllung
+tile.icbm\:proximityDetector.name=Umgebungs-Scanner
+tile.icbm\:spike.0.name=Stacheln
+tile.icbm\:spike.1.name=Giftstacheln
+tile.icbm\:spike.2.name=Entz\u00FCndende Stacheln
+
+## ICBM Sentry
+## Translated by Calclavia and Vexatos
+tile.icbm\:turret.0.name=Gesch\u00FCtzturm
+tile.icbm\:turret.1.name=Railgun
+tile.icbm\:turret.2.name=Flugabwehrgesch\u00FCtzturm
+tile.icbm\:turret.3.name=Lasergesch\u00FCtzturm
+tile.icbm\:turretPlatform.name=Gesch\u00FCtzturmbasis
+
+item.icbm\:bulletShell.name=Patronenh\u00FClse
+item.icbm\:bullet.name=Geschoss
+item.icbm\:bulletRailgun.name=Railgun-Geschoss
+item.icbm\:bulletAntimatter.name=Antimaterien-Geschoss
+item.icbm\:bulletInfinite.name=Unendliches Geschoss
+
+item.icbm\:targetCard.name=Reichweiten-Upgrade
+item.icbm\:shellCollector.name=H\u00FClsensammelupgrade
+
+## Deaths
+death.attack.bullet=%1$s wurde zu einem Schweizer K\u00E4se geschossen!
+death.attack.laser=%1$s wude von Lasern vaporisiert!
