Fixed German language file

--- a/resources/assets/icbm/yuyan/de_DE.properties
+++ b/resources/assets/icbm/yuyan/de_DE.properties
@@ -1,4 +1,5 @@
 ## Translated by Vexatos
+
 itemGroup.ICBM=ICBM
 
 potion.toxin=Toxin
@@ -132,17 +133,17 @@ icbm.minecart.thermobaric.name=Thermobarische Lore
 
 ## ICBM Misc Blocks
 tile.icbm\:oreSulfur.name=Schwefelerz
-tile.icbm\:concrete.name=Concrete
-tile.icbm\:concreteCompact.name=Compact Concrete
-tile.icbm\:concreteReinforced.name=Reinforced Concrete
-tile.icbm\:glassReinforced.name=Reinforced Glass
+tile.icbm\:concrete.name=Beton
+tile.icbm\:concreteCompact.name=Kompakter Beton
+tile.icbm\:concreteReinforced.name=Verst\u00E4rkter Beton
+tile.icbm\:glassReinforced.name=Verst\u00E4rktes Glas
 tile.icbm\:glassPressurePlate.name=Glasdruckplatte
 tile.icbm\:glassButton.name=Glasknopf
 tile.icbm\:camouflage.name=Verh\u00FCllung
 tile.icbm\:proximityDetector.name=Umgebungs-Scanner
-tile.icbm\:spike.0.name=Stacheln
-tile.icbm\:spike.1.name=Giftstacheln
-tile.icbm\:spike.2.name=Entz\u00FCndende Stacheln
+tile.icbm\:spikes.0.name=Stacheln
+tile.icbm\:spikes.1.name=Giftstacheln
+tile.icbm\:spikes.2.name=Entz\u00FCndende Stacheln
 
 ## ICBM Sentry
 ## Translated by Calclavia and Vexatos
