Fixed some block names and texture

--- a/src/main/resources/assets/icbm/yuyan/en_US.properties
+++ b/src/main/resources/assets/icbm/yuyan/en_US.properties
@@ -7,7 +7,6 @@ potion.frostBite=Frost Bite
 potion.radiation=Radiation
 
 ## Items
-item.icbm\:sulfur.name=Sulfur
 item.icbm\:poisonPowder.name=Poison Powder
 item.icbm\:antidote.name=Antidote
 item.icbm\:radarGun.name=Radar Gun
@@ -35,6 +34,10 @@ icbm.machine.9.name=Radar Station
 icbm.machine.10.name=EMP Tower
 icbm.machine.11.name=Cruise Launcher
 icbm.machine.12.name=Missile Coordinator
+
+## Blocks
+tile.icbm\:oreSulfer.name=Sulfur
+tile.icbm\:missileAssembler.name=Missile Assembler
 
 ## ICBM Explosives
 
