--- a/src/main/resources/assets/icbm/yuyan/de_DE.properties
+++ b/src/main/resources/assets/icbm/yuyan/de_DE.properties
@@ -1,5 +1,4 @@
 ## Translated by Vexatos
-
 itemGroup.ICBM=ICBM
 
 potion.toxin=Toxin
@@ -8,7 +7,6 @@ potion.frostBite=Erfrierung
 potion.radiation=Strahlung
 
 ## Items
-item.icbm\:sulfur.name=Schwefel
 item.icbm\:poisonPowder.name=Giftpulver
 item.icbm\:antidote.name=Gegengift
 item.icbm\:radarGun.name=Radar-Pistole
@@ -36,6 +34,10 @@ icbm.machine.9.name=Radarstation
 icbm.machine.10.name=EMP-Turm
 icbm.machine.11.name=Mobile Startrampe
 icbm.machine.12.name=Raketen-Koordinator
+
+## Blocks
+tile.icbm\:oreSulfer.name=Schwefel
+tile.icbm\:missileAssembler.name=Raketenassembler
 
 ## ICBM Explosives
 
