Localize all the things! de_DE update will come tomorrow.

--- a/src/main/resources/assets/icbm/yuyan/en_US.properties
+++ b/src/main/resources/assets/icbm/yuyan/en_US.properties
@@ -167,3 +167,101 @@ item.icbm\:shellCollector.name=Shell Collector Upgrade
 ## Deaths
 death.attack.bullet=%1$s was shot into a swiss cheese!
 death.attack.laser=%1$s was vaporized by lasers!
+
+## Chat messages
+message.tracker.nowtrack=Now tracking:
+message.tracker.nopower=Tracker out of electricity!
+message.defuser.nopower=Defuser out of electricity!
+
+message.designator.callTime=Calling air strike in:
+message.designator.blast=Incoming air strike!
+message.designator.setFreq=Laser designator frequency Set:
+message.designator.failFreq=Frequency must be greater than zero.
+message.designator.callBlast=Calling air strike into designated position!
+message.designator.nopower=Laser designator out of electricity!
+message.designator.noFreq=Laser designator frequency not set!
+
+message.radarGun.scanned=Scanned Coordinates: X:%x, Y:%y, Z:%z - Distance: %d
+message.radarGun.nopower=Radar gun out of electricity!
+message.radarGun.transfer=Coordinate information transferred!
+message.radarGun.noCoords=You must scan a coordinate!
+message.launcher.protected=Region is being protected.
+message.detonator.locked=Remote Locked to: X:%x, Y:%y, Z:%z
+message.detonator.nopower=Remote out of electricity!
+message.radar.redstone=Radar redstone all side emission:
+
+## GUI stuff
+gui.misc.nopower=Insufficient electricity!
+gui.misc.idle=Idle
+gui.misc.freq=Frequency:
+gui.misc.XCoord=X-Coord:
+gui.misc.YCoord=Y-Coord:
+gui.misc.ZCoord=Z-Coord:
+gui.misc.x=X:
+gui.misc.y=Y:
+gui.misc.z=Z:
+gui.misc.status=Status:
+gui.misc.voltage=Voltage:
+
+gui.tracker.freq=Frequency
+gui.detector.name=Proximity Detector
+gui.detector.all=All
+gui.detector.players=Players
+gui.detector.mobs=Mobs
+gui.detector.range=Detection Range
+gui.detector.min=Min
+gui.detector.max=Max
+gui.detector.exclude=Exclude
+gui.detector.include=Include
+gui.detector.target=Target:
+gui.detector.on=On
+gui.detector.status=Status:
+
+gui.empTower.name=EMP Tower
+gui.empTower.missiles=Missiles
+gui.empTower.elec=Electricity
+gui.empTower.both=Both
+gui.empTower.radius=EMP Radius: %p blocks
+gui.empTower.effect=EMP Effect:
+gui.empTower.effectDebilitate=Debilitate Electronics
+gui.empTower.effectDisrupt=Disrupt Missiles
+gui.empTower.effectDeplete=Deplete Electricity
+gui.empTower.mode=Mode:
+gui.empTower.ready=Ready to blast!
+
+gui.launcherBase.place=Place Missile
+gui.launcherScreen.name=Launcher Control Panel
+gui.launcherScreen.detHeight=Detonation Height:
+gui.launcherScreen.lockHeight=Lock Height:
+gui.launcherScreen.target=Missile Target
+gui.launcherScreen.inaccuracy=Inaccuracy: %p blocks
+
+gui.coordinator.sim=Path Simulator
+gui.coordinator.from=From:
+gui.coordinator.to=To:
+gui.coordinator.displace=Displacement: %p Meters
+gui.coordinator.arc=Arc: %p Meters
+gui.coordinator.time=Time: %p Seconds
+gui.coordinator.direction=Direction:
+gui.coordinator.wip=More features coming soon!
+
+gui.radar.coords=Coordinates:
+gui.radar.zoneSafe=Safe Zone:
+gui.radar.zoneAlarm=Alarm Zone:
+gui.radar.on=Radar On!
+gui.radar.nopower=No Electricity!
+
+gui.terminal.name=Terminal
+gui.platform.ammo=Ammunition
+gui.platform.upgrades=Upgrades
+gui.platform.joules=of %j
+gui.platform.access=User Access
+
+## Tooltips
+info.misc.freq=Frequency:
+info.tracker.tracking=Tracking:
+info.designator.noFreq=Frequency: Not Set
+info.radarGun.savedCoords=Saved Coordinates:
+info.radarGun.meters=Meters
+info.detonator.linked=Linked Explosive:
+info.detonator.noLink=No Linked Explosive
